feat: WIP simple dashboard - needs to be extrapolated into components/modules/services etc.

--- a/package.json
+++ b/package.json
@@ -34,16 +34,23 @@
   "author": "Adrian Sanchezdelc <adrian@ticadia.com>",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "mosca": "^2.8.3",
+    "mqtt": "^3.0.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-gauge-chart": "^0.2.1",
     "react-script-loader-hoc": "^1.2.2",
     "react-scripts": "3.0.1",
     "redis": "^2.8.0"
