--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,6 @@ services:
       - redis
     environment:
       - REDIS_HOST=redis
+      - NODE_ENV=production
   redis:
     image: redis:4-alpine
